--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-[submodule "https://github.com/Krico16/curly-tribble.git"]
+[submodule "gateway-service"]
+  path = gateway-service
 	url = gateway-service
-[submodule "https://github.com/Krico16/animated-enigma.git"]
+[submodule "auth-service"]
+  path = auth-service
 	url = auth-service
