--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "gateway-service"]
   path = gateway-service
-	url = gateway-service
+	url = https://github.com/Krico16/curly-tribble.git
 [submodule "auth-service"]
   path = auth-service
-	url = auth-service
+	url = https://github.com/Krico16/animated-enigma.git
