--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # compiled output
-/dist
-/node_modules
-/build
+*/dist
+*/node_modules
+*/build
+/.venv
+/data
+*/.pytest_cache
 
 # Logs
 logs
@@ -54,3 +57,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+*/__init.py
